--- a/config/reformatec-config.properties
+++ b/config/reformatec-config.properties
@@ -12,6 +12,6 @@ db.password=Alejandro21
 # Configuracion del MailService
 service.mail.server=smtp.gmail.com
 service.mail.port=465
-service.mail.account=pruebafpalex@gmail.com
-service.mail.password=probando
+service.mail.account=reformatecservices@gmail.com
+service.mail.password=Proband0
 #
