Restaurar Contraseña e index

--- a/config/reformatec-config.properties
+++ b/config/reformatec-config.properties
@@ -2,6 +2,7 @@
 # Configuracion centralizada de la capa middleware de Reformatec
 # Datos de la configuracion de BD
 # Datos de la configuracion del MailService
+# Datos configuracion de UsuarioService
  # ##############################################################3
 
 # Configuracion conexion con BBDD
@@ -14,4 +15,6 @@ service.mail.server=smtp.gmail.com
 service.mail.port=465
 service.mail.account=reformatecservices@gmail.com
 service.mail.password=Proband0
-#
+# Configuracion de UsuarioService
+service.usuario.startIndex=1
+service.usuario.pageSize=5
