--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,7 @@
 	<classpathentry kind="lib" path="lib/log4j/log4j-core-2.17.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j/log4j-api-2.17.1.jar"/>
 	<classpathentry kind="lib" path="config"/>
+	<classpathentry kind="lib" path="lib/c3p0/c3p0-0.9.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/c3p0/mchange-commons-java-0.2.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
